--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -10,18 +10,20 @@ on:
 
 jobs:
   generate:
+    permissions:
+      contents: write
     runs-on: ubuntu-latest
-    timeout-minutes: 10
+    timeout-minutes: 5
 
     steps:
       - name: generate snake.svg
-        uses: Platane/snk/svg-only@v3
+        uses: Platane/snk/svg-only@v2
         with:
           github_user_name: Hiran-Abhisheka
           outputs: dist/github-contribution-grid-snake.svg
-          
+
       - name: push snake.svg to the output branch
-        uses: crazy-max/ghaction-github-pages@v3.0.2
+        uses: crazy-max/ghaction-github-pages@v2.6.0
         with:
           target_branch: output
           build_dir: dist
